Corrected header spacings

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -15,7 +15,7 @@ $sidebar-width-wide: 286px !default;
 $indented-lists: false !default;
 
 $header-font-size: 1em !default;
-$header-padding-top: 1.5em !default;
+$header-padding-top: 0.6em !default;
 $header-padding-bottom: 0.7em !default;
 
 .group { @include pie-clearfix; }
@@ -86,6 +86,7 @@ body {
     font-size: $header-font-size;
     padding-top: $header-padding-top;
     padding-bottom: $header-padding-bottom;
+    padding-left: 1em;
   }
 }
 
@@ -122,7 +123,7 @@ body.sidebar-footer {
 }
 
 @media only screen and (min-width: 550px) {
-  body > header { font-size: $header-font-size; }
+  body > header { font-size: $header-font-size; padding: 1.5em 0 0.7 0; }
 }
 @media only screen and (min-width: 750px) {
   aside.sidebar { @include collapse-sidebar; }
@@ -130,7 +131,7 @@ body.sidebar-footer {
 #main, #content, .sidebar {
   @extend .group;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768ßpx) {
   body { -webkit-text-size-adjust: auto; }
   body > header { font-size: $header-font-size * 1.2; }
   #main {
