--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -96,10 +96,6 @@ body {
 
 @media only screen and (min-width: 550px) {
 
-  body > header h1{
-    padding-left: 5px;
-  }
-
   body > header h2 { padding-left: 3px; }
 
   body > footer { margin-bottom: 3em; }
